# jamarko_website

./: .gitignore  404.qmd  README.md  _quarto.yml  about.qmd  blog.qmd  contactus.qmd  index.qmd  main.py  pyproject.toml  shop.qmd
assets/scripts/js/: product.js
data/: products.csv  products.yaml  schema.yml
docs/: 404.html  about.html  blog.html  blog.xml  contactus.html  index.html  listings.json  robots.txt  search.json  shop.html  shop.xml  sitemap.xml
docs/pages/: customizations.html  lokta.html  ourpaper.html  ourteam.html  recycled.html  upcycled.html
docs/shop/: boxes.html  greetingcards.html  jewelryboxes.html  lampshades.html  notebooks.html  paperbags.html  pencils.html  photoframes.html  wrappingpapers.html
pages/: customizations.qmd  lokta.qmd  ourpaper.qmd  ourteam.qmd  recycled.qmd  upcycled.qmd
shop/: boxes.qmd  greetingcards.qmd  jewelryboxes.qmd  lampshades.qmd  notebooks.qmd  paperbags.qmd  pencils.qmd  photoframes.qmd  wrappingpapers.qmd
shop/_templates/: product_template copy 2.qmd  product_template copy.qmd  product_template.qmd  product_template_backup.qmd
shop/boxes/: index.qmd
shop/greeting-cards/: index.qmd
shop/greetingcards/: index.qmd
shop/jewelry-boxes/: index.qmd
shop/jewelryboxes/: index.qmd
shop/lampshades/: index.qmd
shop/notebooks/: index.qmd
shop/paper-bags/: index.qmd
shop/paperbags/: index.qmd
shop/pencils/: index.qmd
shop/photo-frames/: index.qmd
shop/photoframes/: index.qmd
shop/uncategorized/: index.qmd
shop/wrapping-papers/: index.qmd
shop/wrappingpapers/: index.qmd
(+276 files in other folders)
