[project]
name = "jamarko-website"
version = "0.1.0"
description = "A fully automated e-commerce catalog built using Quarto, Python, Polars, and GitHub Pages."
authors = ["Mohit Shrestha <contact@mohitshrestha.com.np>"]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.3.0",
    "pagefind>=1.4.0",
    "polars>=1.36.1",
    "quarto>=0.1.0",
    "requests>=2.32.5",
    "stripe>=14.1.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
